# NEPTUNE-ROS

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
src/affordance_learning/: CMakeLists.txt  package.xml
src/affordance_learning/scripts/: display_coverage.py  extract_all_data.py  postprocess_data.ipynb  preprocess_data.py  preprocess_gps_data.py  test.ipynb  test_affordance.py  test_affordance_animation.py  test_affordance_dev.py  test_affordance_multi.py  test_affordance_single.py  test_plan.py  train_affordanceCtrl.py  train_affordance_field.py  train_affordance_field_dev.py  train_affordance_field_single.py  train_affordance_spline.py
src/affordance_learning/scripts/configs/: affordance.yaml  train_config.yaml  train_config_field.yaml
src/affordance_learning/scripts/controller/: __init__.py  affordance_control.py
src/affordance_learning/scripts/ground_truth/: longmap2_spline_result.csv  plant_field.pkl
src/affordance_learning/scripts/imitation_learning/: __init__.py  affordance_train.py  base_train.py
src/affordance_learning/scripts/models/: __init__.py  affordance.py
src/affordance_learning/scripts/utils/: navigation_utils.py  plot_utils.py  rosbag_utils.py  train_utils.py
src/network_training/: CMakeLists.txt  package.xml
src/network_training/scripts/: activation_map_afford.py  bag_to_images.py  combine_vae_latent.py  display_coverage.py  extra_state_analysis.py  extract_all_data.py  extract_camera_data.py  extract_camera_gps_data.py  extract_human_data.py  offline_analysis.ipynb  plot_hist.py  test_affordance_multi_img.py  test_affordance_realtime.py  test_affordance_single_img.py  test_endToend_performance.py  test_hough.ipynb  test_img.ipynb  test_plan.py  test_vae_ctrl_performance.py  test_vae_performance.py  train_affordanceCtrl.py  train_affordance_field_multi_img.py  train_affordance_field_single_img.py  train_endToend.py  train_latentCtrl.py  train_latentCtrl_dagger.py  train_vae_field.py  train_vaegan_field.py
src/network_training/scripts/configs/: affordance.yaml  affordance_ctrl.yaml  affordance_new.yaml  end_to_end.yaml  latent_ctrl.yaml  latent_fc.yaml  train_config_field.yaml  vae_gan.yaml  vanilla_vae.yaml
src/network_training/scripts/controller/: __init__.py  (+4 more)
src/px4_offboard/: CMakeLists.txt  package.xml
src/px4_offboard/include/: common.h  forward_flight.h  math_utils.h  pid.h  rulebased_ctrl.h  user_config.h
src/px4_offboard/launch/: forward_flight.launch  forward_flight_sitl.launch  forward_flight_xavier.launch
src/px4_offboard/msg/: ControlCmd.msg  Pid.msg  PositionCommand.msg
src/px4_offboard/script/: afford_nav_field.py  afford_nav_spline.py  get_depth.py  run_agent_control.py  run_ai_control.py  test.py  test_afford_ctrl.py  test_emergency.py  utils.py
src/px4_offboard/src/: fake_yawCmd.cpp  forward_flight.cpp  forward_flight_dev.cpp  pid.cpp  set_attitude.cpp
(+150 files in other folders)
